# SnakeGame

./: .gitignore  CMakeLists.txt  README.md
src/: Config.h  Food.cpp  Food.h  Game.cpp  Game.h  Obstacle.cpp  Obstacle.h  Snake.cpp  Snake.h  Utils.cpp  Utils.h  main.cpp
